<resources>
    <string name="app_name">Star Wars Wiki</string>
    <string name="height">Height:</string>
    <string name="mass">Mass:</string>
    <string name="hairColor">Hair Color:</string>
    <string name="eyeColor">Eye Color:</string>
    <string name="gender">Gender:</string>
    <string name="bYear">Birth Year:</string>
    <string name="model">Model:</string>
    <string name="manufacter">Manufacter:</string>
    <string name="length">Length:</string>
    <string name="maxSpeed">Max Speed:</string>
    <string name="skinColor">Skin Color:</string>
</resources>
