<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="LUKE SKYWALKER"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:text="@string/height"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtHeight"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:text="202"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblMass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/mass"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtMass"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:text="136"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblHairColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/hairColor"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtHairColor"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:text="None"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblskinColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/skinColor"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtSkinColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="White"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblEyeColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/eyeColor"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtEyeColor"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:text="Yellow"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblBirthYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/bYear"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtBirthYear"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:text="41.9BBY"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
