<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="LUKE SKYWALKER"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:text="@string/model"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtModel"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:text="202"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblManufacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/manufacter"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtManufacter"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:text="136"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/length"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtLength"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:text="None"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblMaxSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/maxSpeed"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtMaxSpeed"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:text="White"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
